deploy-webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sync-webhook
  name: sync-webhook
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync-webhook
  strategy: {}
  template:
    metadata:
      labels:
        app: sync-webhook
    spec:
      containers:
      - image: jarhmj.top/sync-webhook:v1.0
        imagePullPolicy: Never
        name: sync-webhook
        command: ["uvicorn", "main:app", "--host", "0.0.0.0"]
        volumeMounts:
        - mountPath: /usr/src/repo
          name: repo
        resources: {}
      volumes:
      - name: repo
        hostPath:
          path: /root/service/blog/JarHMJ.github.io
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sync-webhook
  name: sync-webhook
  namespace: blog
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: sync-webhook
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sync-webhook
  namespace: blog
  annotations:
    # traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  rules:
  - host: "webhook.jarhmj.top"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sync-webhook
            port:
              number: 8000
